# playwright_stealth

./: CHANGELOG  CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: python-app.yml
playwright_stealth/: __init__.py  context_managers.py  stealth.py  types.py
playwright_stealth/js/: generate.magic.arrays.js  utils.js
playwright_stealth/js/evasions/: chrome.csi.js  chrome.hairline.js  chrome.runtime.js
playwright_stealth/js/mitigations/: chrome.app.js  chrome.hairline.js  chrome.load.times.js  chrome.runtime.js  navigator.hardwareConcurrency.js  navigator.languages.js  navigator.permissions.js  navigator.platform.js  navigator.plugins.js  navigator.userAgent.js  navigator.vendor.js  navigator.webdriver.js  webgl.vendor.js
tests/: conftest.py  test_arg_patching.py  test_basics.py  test_useragent.py
