[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "playwright-stealth"
dynamic = ["version"]
description = "playwright stealth"
readme = "README.md"
license = ""
requires-python = ">=3.8"
authors = [
    { name = "AtuboDad", email = "lcjasas@sina.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "playwright", "typing-extensions"
]

[project.optional-dependencies]
test = [
    "pytest", "pytest-asyncio"
]

[project.urls]
Homepage = "https://github.com/Mattwmaster58/playwright_stealth"

[tool.pytest.ini_options]
asyncio_mode="auto"
asyncio_default_fixture_loop_scope="function"